--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-uuid": "^1.4.3",
     "nodemailer": "^2.3.2",
     "nodemailer-ses-transport": "^1.3.0",
+    "nodemailer-smtp-transport": "^2.7.2",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "pm2": "^1.1.3",
